list column gap fixed

--- a/src/assets/styles/list.scss
+++ b/src/assets/styles/list.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    row-gap: 2.375rem;
+    gap: 2.375rem 1rem;
 }
 
 @media screen and (max-width: 840px) {
